--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 beautifulsoup4==4.12.2
 fastapi==0.101.1
 langchain==0.0.266
-pydantic==2.1.1
+pydantic
 python-dotenv==1.0.0
 Requests==2.31.0
 requests_oauthlib==1.3.1
