--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ fastapi==0.101.1
 langchain==0.0.266
 pydantic
 python-dotenv==1.0.0
-Requests==2.31.0
-requests_oauthlib==1.3.1
+Requests
+requests_oauthlib
 tweepy==4.14.0
